--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-themes": "^0.2.1",
     "next-translate": "^1.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
